ver 0.19 (not yet released)
* protocol
  - new commands "addtagid", "cleartagid", "listfiles", "rangeid"
  - "lsinfo" and "readcomments" allowed for remote files
  - "listneighbors" lists file servers on the local network
  - "playlistadd" supports file:///
  - "idle" with unrecognized event name fails
  - "list" on album artist falls back to the artist tag
  - "list" and "count" allow grouping
* database
  - proxy: forward "idle" events
  - proxy: forward the "update" command
  - proxy: copy "Last-Modified" from remote directories
  - simple: compress the database file using gzip
  - upnp: new plugin
  - cancel the update on shutdown
* storage
  - music_directory can point to a remote file server
  - nfs: new plugin
  - smbclient: new plugin
* playlist
  - cue: fix bogus duration of the last track
  - cue: restore CUE tracks from state file
  - soundcloud: use https instead of http
  - soundcloud: add default API key
* archive
  - read tags from songs in an archive
* input
  - alsa: new input plugin
  - curl: options "verify_peer" and "verify_host"
  - mms: non-blocking I/O
  - nfs: new input plugin
  - smbclient: new input plugin
* filter
  - volume: improved software volume dithering
* decoder:
  - vorbis, flac, opus: honor DESCRIPTION= tag in Xiph-based files as a comment to the song
  - audiofile: support scanning remote files
  - audiofile: log libaudiofile errors
  - sndfile: support scanning remote files
  - sndfile: support tags "comment", "album", "track", "genre"
  - mp4v2: support playback of MP4 files.
* encoder:
  - shine: new encoder plugin
* threads:
  - the update thread runs at "idle" priority
  - the output thread runs at "real-time" priority
  - increase kernel timer slack on Linux
  - name each thread (for debugging)
* configuration
  - allow playlist directory without music directory
  - use XDG to auto-detect "music_directory" and "db_file"
* new resampler option using libsoxr
* ARM NEON optimizations