@@ -48,6 +48,9 @@ locate_parse_type(const char *str)
 	if (strcmp(str, "base") == 0)
 		return LOCATE_TAG_BASE_TYPE;
 
+	if (strcmp(str, "modified-since") == 0)
+		return LOCATE_TAG_MODIFIED_SINCE;
+
 	return tag_name_parse_i(str);
 }
 
@@ -63,6 +66,11 @@ ImportString(const char *p, bool fold_case)
 SongFilter::Item::Item(unsigned _tag, const char *_value, bool _fold_case)
 	:tag(_tag), fold_case(_fold_case),
 	 value(ImportString(_value, _fold_case))
+{
+}
+
+SongFilter::Item::Item(unsigned _tag, time_t _time)
+	:tag(_tag), time(_time)
 {
 }
 
@@ -128,6 +136,9 @@ SongFilter::Item::Match(const DetachedSong &song) const
 	if (tag == LOCATE_TAG_BASE_TYPE)
 		return uri_is_child_or_same(value.c_str(), song.GetURI());
 
+	if (tag == LOCATE_TAG_MODIFIED_SINCE)
+		return song.GetLastModified() >= time;
+
 	if (tag == LOCATE_TAG_FILE_TYPE)
 		return StringMatch(song.GetURI());
 
@@ -141,6 +152,9 @@ SongFilter::Item::Match(const LightSong &song) const
 		const auto uri = song.GetURI();
 		return uri_is_child_or_same(value.c_str(), uri.c_str());
 	}
+
+	if (tag == LOCATE_TAG_MODIFIED_SINCE)
+		return song.mtime >= time;
 
 	if (tag == LOCATE_TAG_FILE_TYPE) {
 		const auto uri = song.GetURI();
@@ -160,6 +174,58 @@ SongFilter::~SongFilter()
 	/* this destructor exists here just so it won't get inlined */
 }
 
+#if !defined(__GLIBC__) && !defined(WIN32)
+
+/**
+ * Determine the time zone offset in a portable way.
+ */
+gcc_const
+static time_t
+GetTimeZoneOffset()
+{
+	time_t t = 1234567890;
+	struct tm tm;
+	tm.tm_isdst = 0;
+	gmtime_r(&t, &tm);
+	return t - mktime(&tm);
+}
+
+#endif
+
+gcc_pure
+static time_t
+ParseTimeStamp(const char *s)
+{
+	assert(s != nullptr);
+
+	char *endptr;
+	unsigned long long value = strtoull(s, &endptr, 10);
+	if (*endptr == 0 && endptr > s)
+		/* it's an integral UNIX time stamp */
+		return (time_t)value;
+
+#ifdef WIN32
+	/* TODO: emulate strptime()? */
+	return 0;
+#else
+	/* try ISO 8601 */
+
+	struct tm tm;
+	const char *end = strptime(s, "%FT%TZ", &tm);
+	if (end == nullptr || *end != 0)
+		return 0;
+
+#ifdef __GLIBC__
+	/* timegm() is a GNU extension */
+	return timegm(&tm);
+#else
+	tm.tm_isdst = 0;
+	return mktime(&tm) + GetTimeZoneOffset();
+#endif /* !__GLIBC__ */
+
+#endif /* !WIN32 */
+}
+
 bool
 SongFilter::Parse(const char *tag_string, const char *value, bool fold_case)
 {
@@ -173,6 +239,15 @@ SongFilter::Parse(const char *tag_string, const char *value, bool fold_case)
 
 		/* case folding doesn't work with "base" */
 		fold_case = false;
+	}
+
+	if (tag == LOCATE_TAG_MODIFIED_SINCE) {
+		time_t t = ParseTimeStamp(value);
+		if (t == 0)
+			return false;
+
+		items.push_back(Item(tag, t));
+		return true;
 	}
 
 	items.push_back(Item(tag, value, fold_case));
